[package]
name = "two_mover_3_pos"
version = "0.1.0"
authors = ["Zax71 <zabax32@gmail.com>"]
edition = "2021"
include = ["LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.81"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
egui = "0.32"
eframe = { version = "0.32", default-features = false, features = [
  "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
  "default_fonts", # Embed the default egui fonts.
  "glow",          # Use the glow rendering backend. Alternative: "wgpu".
  "wayland",       # To support Linux (and CI)
  "x11",           # To support older Linux distributions (restores one of the default features)
] }
log = "0.4.27"

# You only need serde if you want app persistence:
serde = { version = "1.0.219", features = ["derive"] }
vector3d = "0.2.1"
measurements = "0.11.0"
regex = "1.11.1"
rusqlite = { version = "*", features = ["bundled"] }
dirs = "6.0.0"
rusqlite_migration = { version = "1.3.1", features = ["from-directory"] }
include_dir = "0.7.4"
anyhow = "1.0.98"
egui-notify = "0.20.0"
percentage = "0.1.0"
isx = "0.1.1"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
